packages/hunspell_ffi/lib/hunspell_ffi_bindings_generated.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

@ffi.Native<
  CiyueHunspellHandle Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
>()
external CiyueHunspellHandle ciyue_hunspell_create(
  ffi.Pointer<ffi.Char> aff_path,
  ffi.Pointer<ffi.Char> dic_path,
);

@ffi.Native<ffi.Void Function(CiyueHunspellHandle)>()
external void ciyue_hunspell_destroy(CiyueHunspellHandle handle);

/// Returns the number of bytes required for the NUL-separated result. The
/// result has one NUL terminator after every word and one additional NUL at the
/// end. Returns 0 when Hunspell produced no results, or -1 on invalid input or
/// an internal error.
@ffi.Native<
  ffi.Int32 Function(
    CiyueHunspellHandle,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Uint8>,
    ffi.Int32,
  )
>()
external int ciyue_hunspell_stem(
  CiyueHunspellHandle handle,
  ffi.Pointer<ffi.Char> word,
  ffi.Pointer<ffi.Uint8> output,
  int output_capacity,
);

@ffi.Native<
  ffi.Int32 Function(
    CiyueHunspellHandle,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Uint8>,
    ffi.Int32,
  )
>()
external int ciyue_hunspell_suggest(
  CiyueHunspellHandle handle,
  ffi.Pointer<ffi.Char> word,
  ffi.Pointer<ffi.Uint8> output,
  int output_capacity,
);

typedef CiyueHunspellHandle = ffi.Pointer<ffi.Void>;
